# devtools

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  wdio.conf.ts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.6-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md
.planning/phases/01-scaffold-harness-proof/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  NEXT-SESSION.md  deferred-items.md
.planning/phases/02-shell/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md  deferred-items.md
.planning/phases/03-hero-protobuf-encoding-ux-constraints/: 03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/phases/04-catalogue/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-05-SUMMARY.md  04-06-SUMMARY.md  04-07-PLAN.md  04-07-SUMMARY.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-RESEARCH.md  04-UI-REVIEW.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-native-polish/: 05-04-PLAN.md  05-04-SUMMARY.md  05-HUMAN-UAT.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-distribution/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-05-PLAN.md  06-DISCUSSION-LOG.md  06-HUMAN-UAT.md  06-RESEARCH.md  06-UI-REVIEW.md
.planning/phases/07-formatters/: 07-03-SUMMARY.md  07-03-xml-formatter-PLAN.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-HUMAN-UAT.md  07-REVIEW.md  07-VERIFICATION.md
.planning/phases/08-statusbar-size-readout-cleanup/: 08-REVIEW.md  08-VERIFICATION.md
.planning/phases/09-pure-release-core-housekeeping/: 09-01-PLAN.md  09-02-PLAN.md  09-DISCUSSION-LOG.md  09-VERIFICATION.md
.planning/phases/10-bump-and-tag-driver/: 10-01-SUMMARY.md  10-03-SUMMARY.md  10-RESEARCH.md  10-SECURITY.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/phases/13-url-tool/: 13-01-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
design/: DevTools Mockup.html  README.md  devtools-ui.jsx
docs/: HARNESS.md  RELEASE.md  design-and-plan.md  handoff-instructions.md  harness-and-decisions.md  licensing-research.md  phase-0-notes.md  phase-1-ui-review.md
docs/archive/: phase-0-notes.md
infra/keygen/: .env.example  Caddyfile  README.md  RUNBOOK.md  compose.yaml  deploy.sh  release-seat.sh  setup.sh  suspend-license.sh  swap.sh  webhook.Dockerfile
scaffold/: README.md
scaffold/src/: App.tsx  router.tsx
scripts/: build-and-publish.mjs  bump-and-tag.mjs  changelog.mjs  check-dev-strip.sh  e2e-spike.sh
scripts/keygen-ce/: .env.example  README.md  bootstrap.sh  compose.yaml  spike.sh
scripts/lib/: releaseNotes.mjs
server/webhook/: .env.example  package.json  tsconfig.json
src/: App.test.tsx  App.tsx  index.css  main.tsx  router.test.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: ce-ed25519-pubkey.b64  ce-machine.lic
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/license/: commands.rs  config.rs  fingerprint.rs  keychain.rs  keygen_client.rs  mod.rs  store.rs  verify.rs
src/components/: AccentSwatchGrid.test.tsx  AccentSwatchGrid.tsx  AppearancePreviewStrip.tsx  AppearanceSettings.test.tsx  AppearanceSettings.tsx  CommandPalette.locked.test.tsx  CommandPalette.prod.test.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CopyButton.tsx  FormatterView.test.tsx  FormatterView.tsx  GeneralSettings.test.tsx  GeneralSettings.tsx  HotkeyCaptureField.test.tsx  HotkeyCaptureField.tsx  HotkeysSettings.test.tsx  HotkeysSettings.tsx  LicenseSettings.test.tsx  LicenseSettings.tsx  ResizableSplit.tsx  SegmentedControl.test.tsx  SegmentedControl.tsx  SettingToggle.test.tsx  SettingToggle.tsx  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.locked.test.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarResetMenu.tsx  StatusBar.test.tsx  StatusBar.tsx  ThemeCardGroup.test.tsx  ThemeCardGroup.tsx  ToolRoute.test.tsx  ToolRoute.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  UpdatesSettings.test.tsx  (+5 more)
src/lib/: bytes.test.ts  bytes.ts  timeFormat.test.ts  timeFormat.ts  ulid.test.ts  ulid.ts  url.test.ts  url.ts  uuidv7.test.ts  uuidv7.ts
src/shell/: SettingsDeepLink.tsx  StartupRedirect.tsx  appearance.ts  appearanceContrast.test.ts  fuzzy.test.ts  fuzzy.ts  hotkeyAccelerator.test.ts  hotkeyAccelerator.ts  parseHashTarget.test.ts  parseHashTarget.ts  preferences.ts  prefsStore.test.ts  prefsStore.ts  proUpsell.test.ts  proUpsell.ts  resolveStartupTool.test.ts  resolveStartupTool.ts  settingsStore.test.ts  settingsStore.ts  startupReveal.test.ts  startupReveal.ts  summon.test.ts  summon.ts  testStore.ts  theme.test.ts  theme.ts  toolOrder.test.ts  toolOrder.ts  update.test.ts  update.ts  upsellStore.test.ts  upsellStore.ts  useAppearance.test.ts  useAppearance.ts  useCopyFeedback.test.ts  useCopyFeedback.ts  useEntitlements.ts  useLicenseUi.ts  usePreferences.test.ts  usePreferences.ts  (+8 more)
test/e2e/: appearance.e2e.ts  base64.e2e.ts  cmdk-pro.e2e.ts  cron.e2e.ts  entitlements.e2e.ts  hash.e2e.ts  helpers.ts  hotkeys.e2e.ts  json-formatter.e2e.ts  jwt.e2e.ts  license-buy.e2e.ts  license-settings.e2e.ts  license-states.e2e.ts  license.e2e.ts  protobuf-decoder.e2e.ts  regex.e2e.ts  settings.e2e.ts  ship-gate.e2e.ts  sidebar.e2e.ts  skeleton.e2e.ts  summon.e2e.ts  unix-time.e2e.ts  update.e2e.ts  url.e2e.ts  uuid-ulid.e2e.ts  xml-formatter.e2e.ts
(+454 files in other folders)
