[package]
name = "devtools-app"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devtools_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"

# HRN-02 automation spike (D-01). Embedded W3C WebDriver server for driving the
# real WKWebView in tests. It is an OPTIONAL dependency behind the `webdriver`
# Cargo feature (below) and is only registered in lib.rs under
# `#[cfg(feature = "webdriver")]`. The feature is enabled ONLY for the e2e
# UI-gate run (`pnpm tauri dev --features webdriver`, via scripts/e2e-spike.sh) —
# NEVER by `pnpm tauri build`. A plain release build therefore excludes the
# crate AND its W3C server entirely (RESEARCH Pitfall 4 / threats T-01-10 /
# T-01-11). Override the port via TAURI_WEBDRIVER_PORT if 4445 conflicts.
#
# NOTE: `[target.'cfg(debug_assertions)'.dependencies]` does NOT work — Cargo
# warns "debug_assertions ... is not supported for selecting dependencies" and
# the dep leaks into the release tree (`cargo tree --release | grep webdriver`
# = 1). A feature flag is the correct, verified idiom for a build-excluded dep.
tauri-plugin-webdriver = { version = "0.2", optional = true }
tauri-plugin-store = "2.4.3"
# Relaunch backend for the updater apply flow (DST-02). The JS side calls it via
# @tauri-apps/plugin-process behind src/lib/platform/tauri.ts to restart into the
# freshly-installed bundle. Desktop-wide (NOT target-gated) — relaunch is needed
# on every desktop target. Gated at runtime by `process:allow-restart`.
tauri-plugin-process = "2.3.1"

[features]
# Enabled only for the e2e UI gate (`--features webdriver`); off in release.
webdriver = ["dep:tauri-plugin-webdriver"]

# Native macOS-polish plugins (Phase 5, NAT-02 + SHL-05/D-11). Target-scoped via
# the SUPPORTED `cfg(any(target_os = ...))` idiom (distinct from the unsupported
# `cfg(debug_assertions)` selector noted above) so future Windows/Linux work
# inherits them cleanly; macOS is the only build target now. These three make NO
# network calls (offline-by-design holds, threat T-05-03). single-instance + tray
# have no JS API / no capability; global-shortcut + window-state are gated by
# capabilities/default.json.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-window-state = "2.4.1"
# Updater backend (DST-02): fetches latest.json, downloads the .app.tar.gz, and
# MANDATORY-verifies its minisign signature against the committed pubkey before
# swapping the bundle. The JS side drives it via @tauri-apps/plugin-updater behind
# src/lib/platform/tauri.ts. Gated at runtime by `updater:default`.
tauri-plugin-updater = "2.10.1"
