[package]
name = "devtools-app"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devtools_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"

# HRN-02 automation spike (D-01). Embedded W3C WebDriver server for driving the
# real WKWebView in tests. It is an OPTIONAL dependency behind the `webdriver`
# Cargo feature (below) and is only registered in lib.rs under
# `#[cfg(feature = "webdriver")]`. The feature is enabled ONLY for the e2e
# UI-gate run (`pnpm tauri dev --features webdriver`, via scripts/e2e-spike.sh) —
# NEVER by `pnpm tauri build`. A plain release build therefore excludes the
# crate AND its W3C server entirely (RESEARCH Pitfall 4 / threats T-01-10 /
# T-01-11). Override the port via TAURI_WEBDRIVER_PORT if 4445 conflicts.
#
# NOTE: `[target.'cfg(debug_assertions)'.dependencies]` does NOT work — Cargo
# warns "debug_assertions ... is not supported for selecting dependencies" and
# the dep leaks into the release tree (`cargo tree --release | grep webdriver`
# = 1). A feature flag is the correct, verified idiom for a build-excluded dep.
tauri-plugin-webdriver = { version = "0.2", optional = true }
tauri-plugin-store = "2.4.3"
# Relaunch backend for the updater apply flow (DST-02). The JS side calls it via
# @tauri-apps/plugin-process behind src/lib/platform/tauri.ts to restart into the
# freshly-installed bundle. Desktop-wide (NOT target-gated) — relaunch is needed
# on every desktop target. Gated at runtime by `process:allow-restart`.
tauri-plugin-process = "2.3.1"
# Licensing core (Phase 19, LIC-01/03/04/06). Versions are research-locked — do
# NOT bump majors:
# - ed25519-dalek 2.2: VerifyingKey/verify_strict API (the Keygen example repo's
#   1.0 API does not compile against current crates — port logic, not code).
# - keyring 3.6 pinned, NOT 4.x: v4 (2026-05) is a month-old rewrite around
#   keyring-core with explicit store init; its own README warns existing apps
#   off it (research Pitfall 6). The `apple-native` feature is REQUIRED — v3
#   without it has NO macOS store and entries fail at runtime.
# - hmac 0.12 + sha2 0.10: shares ed25519-dalek's sha2 ^0.10 tree (one sha2).
ed25519-dalek = "2.2"
keyring = { version = "3.6", features = ["apple-native"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
# Fixture keypair generation for license verify tests (rand_core 0.6-compatible
# OsRng — ed25519-dalek 2.x's rand_core feature expects the 0.6 line).
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"

[features]
# Enabled only for the e2e UI gate (`--features webdriver`); off in release.
webdriver = ["dep:tauri-plugin-webdriver"]

# Native macOS-polish plugins (Phase 5, NAT-02 + SHL-05/D-11). Target-scoped via
# the SUPPORTED `cfg(any(target_os = ...))` idiom (distinct from the unsupported
# `cfg(debug_assertions)` selector noted above) so future Windows/Linux work
# inherits them cleanly; macOS is the only build target now. These three make NO
# network calls (offline-by-design holds, threat T-05-03). single-instance + tray
# have no JS API / no capability; global-shortcut + window-state are gated by
# capabilities/default.json.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-window-state = "2.4.1"
# Updater backend (DST-02): fetches latest.json, downloads the .app.tar.gz, and
# MANDATORY-verifies its minisign signature against the committed pubkey before
# swapping the bundle. The JS side drives it via @tauri-apps/plugin-updater behind
# src/lib/platform/tauri.ts. Gated at runtime by `updater:default`.
tauri-plugin-updater = "2.10.1"
